# src/apiserver_old/engine/docs/openapi.yaml
@@ -99,22 +99,6 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Run"
-    post:
-      operationId: submitRun
-      summary: Submit run
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/RunSimpleSubmitParams"
-      responses:
-        200:
-          description: ok
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Run"
   "/runs/{id}":
     get:
       operationId: getRun
